[B]Version 2.4.0.003[/B]
- Report language code from thetvdbapi.py to metahandlers.py
- Add xbmcvfs for 'Reset database' option

[B]Version 2.4.0.002[/B]
- Set FR language by default

[B]Version 2.4.0.001[/B]
- Add tvdb language option
- Add 'Reset Database' option

[B]Version 2.4.0[/B]
- New TMDB API key
- Updated calls to TMDB so we only make one request per movie

[B]Version 2.3.1[/B]
- Fixed bug on getting tvshows from cache - returns None instead of letting exception pass
- Re-added db initialization - stupid mistake

[B]Version 2.3.0[/B]
- Fixed changed watched on episodes (again)
- Added fetch of trailers using v3 of tmdb api
- Check if a match if found from tmdb before requesting rest of data
- Added search on similar movies from tmdb

[B]Version 2.2.0[/B]
- Reverted back to simplejson import for TMDB scraper
- Updated metacontainers folder deleting functionality
- Added legacy check on xbmcvfs.mkdir

[B]Version 2.1.0[/B]
- Updated TMDB scraper to use v3 api
- Added multithreaded support
- Added language setting

[B]Version 2.0.3[/B]
- Rewrite of get_episode logic - now supports air date
- Added search/refresh on tv shows - returns list of possible matches
- Many code clean ups and fixes
- Early support for batch meta grabs - still WIP

[B]Version 2.0.2[/B]
- Added MySQL support
- Added Year column for TV Shows - Temporary upgrade code in place
- Playcount now set for Watched Status in Frodo
- Use of common logging function, reduce amount of logs in normal logging mode
- Remove usage of date conversion routines
- Sending back TVShowTitle for episodes for subtitles to work proper
- More error trapping to protect against script errors
- Backfilling more missing data from IMDB
- Fixed Votes not populating properly

[B]Version 1.0.1[/B]
- Updated for changes in IMDB field names
- Added return of Year for TV Shows - still to do: save Year in DB
- Corrected Ratings and Episode values on TV Shows not returning in proper format in all scenarios
