@@ -238,7 +238,7 @@
 
 <addon id="script.module.metahandler"
      name="metahandler"
-     version="2.4.0.003"
+     version="2.4.0.004"
      provider-name="Eldorado">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
