@@ -1,3 +1,7 @@
+[B]Version 2.4.0.004[/B]
+- Create _cache_lookup_by_nocover
+- Fix _cache_delete_video_meta
+
 [B]Version 2.4.0.003[/B]
 - Report language code from thetvdbapi.py to metahandlers.py
 - Add xbmcvfs for 'Reset database' option
